[package]
name = "custom-oauth-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-files = "0.6.2"
actix-session = {version = "0.7.2", features = ["cookie-session"]}
actix-tls = "3.0.3"
actix-web = "4.3.1"
async-stream = "0.3.5"
env_logger = "0.10.0"
log = "0.4.17"
oxide-auth = "0.5.3"
oxide-auth-actix = "0.2.0"
